<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.tab_fragments.FragmentTabBrewDetails">

    <RelativeLayout
        android:id="@+id/relative_layout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_icon_margin_16"
        android:layout_marginStart="@dimen/form_icon_margin_16"
        android:layout_marginEnd="@dimen/form_icon_margin_16">

        <ImageView
            android:id="@+id/icon_name"
            android:layout_width="@dimen/form_icon_size_24"
            android:layout_height="@dimen/form_icon_size_24"
            android:layout_marginEnd="@dimen/form_icon_margin_16"
            android:layout_centerVertical="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/icon_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:hint="@string/text_name" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_icon_margin_16"
        android:layout_marginStart="@dimen/form_icon_margin_16"
        android:layout_marginEnd="@dimen/form_icon_margin_16">

        <ImageView
            android:id="@+id/icon_coffee"
            android:layout_width="@dimen/form_icon_size_24"
            android:layout_height="@dimen/form_icon_size_24"
            android:layout_marginEnd="@dimen/form_icon_margin_16"
            android:layout_centerVertical="true"/>

        <Spinner
            android:id="@+id/spinner_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/icon_coffee"
            android:layout_marginEnd="@dimen/form_icon_margin_32"
            android:layout_centerVertical="true"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:id="@+id/text_view_add_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/icon_coffee"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            android:text="@string/add_coffee"
            android:textSize="@dimen/text_size_17"/>

        <ImageView
            android:id="@+id/button_add_coffee"
            android:layout_height="@dimen/circular_image_view_size_30"
            android:layout_width="@dimen/circular_image_view_size_30"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/button"/>

        <Space
            android:id="@+id/space_coffee"
            android:layout_width="@dimen/form_icon_size_24"
            android:layout_height="@dimen/form_icon_size_24"
            android:layout_marginTop="@dimen/form_icon_margin_16"
            android:layout_alignStart="@id/text_view_add_coffee"
            android:layout_alignTop="@id/text_view_add_coffee"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_brew_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_icon_margin_16"
        android:layout_marginStart="@dimen/form_icon_margin_16"
        android:layout_marginEnd="@dimen/form_icon_margin_16">

        <ImageView
            android:id="@+id/icon_brew_date"
            android:layout_width="@dimen/form_icon_size_24"
            android:layout_height="@dimen/form_icon_size_24"
            android:layout_marginEnd="@dimen/form_icon_margin_16"
            android:layout_centerVertical="true"
            android:src="@drawable/button"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_brew_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/icon_brew_date"
            android:layout_centerVertical="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_brew_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/text_brew_date" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_brew_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_icon_margin_16"
        android:layout_marginStart="@dimen/form_icon_margin_16"
        android:layout_marginEnd="@dimen/form_icon_margin_16">

        <ImageView
            android:id="@+id/icon_brew_type"
            android:layout_width="@dimen/form_icon_size_24"
            android:layout_height="@dimen/form_icon_size_24"
            android:layout_marginEnd="@dimen/form_icon_margin_16"
            android:layout_centerVertical="true"/>

        <Spinner
            android:id="@+id/spinner_brew_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/icon_brew_type"
            android:layout_centerVertical="true"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

        <Space
            android:id="@+id/space_brew_type"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignStart="@id/spinner_brew_type"
            android:layout_alignTop="@id/spinner_brew_type"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_TDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_icon_margin_16"
        android:layout_marginStart="@dimen/form_icon_margin_16"
        android:layout_marginEnd="@dimen/form_icon_margin_16">

        <ImageView
            android:id="@+id/icon_TDS"
            android:layout_width="@dimen/form_icon_size_24"
            android:layout_height="@dimen/form_icon_size_24"
            android:layout_marginEnd="@dimen/form_icon_margin_16"
            android:layout_centerVertical="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_TDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/icon_TDS"
            android:layout_centerVertical="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_TDS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/text_TDS" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_icon_margin_16"
        android:layout_marginStart="@dimen/form_icon_margin_16"
        android:layout_marginEnd="@dimen/form_icon_margin_16">

        <ImageView
            android:id="@+id/icon_price"
            android:layout_width="@dimen/form_icon_size_24"
            android:layout_height="@dimen/form_icon_size_24"
            android:layout_marginEnd="@dimen/form_icon_margin_16"
            android:layout_centerVertical="true"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/icon_price"
            android:layout_centerVertical="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/text_price" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</LinearLayout>